--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
+    "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "postcss": "8.4.32",
     "react": "18.2.0",
+    "react-animated-numbers": "^0.17.1",
     "react-dom": "18.2.0",
     "react-type-animation": "^3.2.0",
     "resend": "^2.1.0",
